# livre

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  design.md  flake.nix  roadmap.md  test.rs  test.txt
.github/workflows/: publish.yml  release-plz.yml  test.yml
examples/: content.rs  dictionaries.rs  doc.rs  read.rs  text.rs  text_objects.rs  text_operators.rs
livre/: Cargo.toml
livre-data/: Cargo.toml
livre-data/src/: lib.rs  position.rs  rectangle.rs
livre-derive/: CHANGELOG.md  Cargo.toml  README.md
livre-derive/src/: attr.rs  build_from_raw_dict.rs  extract.rs  from_dict.rs  from_dict_ref.rs  from_raw_dict.rs  lib.rs  option.rs
livre-derive/src/utilities/: attr.rs  extraction.rs  mod.rs  option.rs
livre-document/: Cargo.toml
livre-document/examples/: doc.rs
livre-document/src/: document.rs  header.rs  update.rs
livre-extraction/: Cargo.toml
livre-extraction/examples/: derive.rs  extract.rs
livre-extraction/src/: dictionary.rs  error.rs  extraction.rs  implementations.rs  lib.rs  parsing.rs
livre-extraction/src/complex/: indirect.rs  mod.rs  stream.rs
livre-extraction/src/dictionary/: mod.rs  utilities.rs
livre-extraction/src/encoding/: mod.rs
livre-extraction/src/extraction/: mod.rs  string.rs
livre-extraction/src/pdf/: hex_string.rs  indirect.rs  mod.rs  name.rs  reference.rs
livre-extraction/src/pdf_types/: hex_string.rs  mod.rs  reference.rs
livre-extraction/src/primitive/: boolean.rs  mod.rs  numbers.rs  option.rs  string.rs
livre-extraction/src/primitives/: array.rs  bytes.rs  char.rs  hash_map.rs  map.rs  mod.rs  numbers.rs  option.rs  string.rs  tuple.rs  unit.rs  vec.rs
livre-extraction/src/utilities/: delimited.rs  into_string.rs  maybe_array.rs  mod.rs  noop.rs  optional_reference.rs  raw_dict.rs  raw_dict_value.rs
livre-filters/: Cargo.toml
livre-filters/src/: error.rs  lib.rs
livre-filters/src/filters/: dct.rs  flate.rs  mod.rs
livre-fonts/: Cargo.toml
livre-fonts/src/: lib.rs  type1.rs
livre-fonts/src/descriptors/: mod.rs
livre-fonts/src/type1/: mod.rs  type1.rs
livre-leg/: Cargo.toml
livre-leg/examples/: doc.rs
livre-leg/src/: error.rs  lib.rs
livre-leg/src/extraction/: boolean.rs  numbers.rs
livre-leg/src/extraction/dictionary/: mod.rs
livre-leg/src/filters/: mod.rs
livre-leg/src/objects/: integer.rs  literal_string.rs  mod.rs  name.rs  object.rs  stream.rs
livre-leg/src/structure/: crossrefs.rs  header.rs  mod.rs  startxref.rs  trailer.rs  update.rs
livre-leg/src/utilities/: digits.rs  misc.rs  whitespace.rs
livre-objects/: Cargo.toml
livre-objects/src/: lib.rs  object.rs  stream.rs
livre-objects/src/complex/: indirect.rs  mod.rs  stream.rs
livre-objects/src/objects/: mod.rs  object.rs  stream.rs
livre-objects/src/simple/: hex_string.rs  mod.rs  reference.rs
livre-objects/src/structure/: catalogue.rs  mod.rs  object_stream.rs  trailer.rs
livre-objects/src/structure/crossref/: main.rs  mod.rs  plain.rs  reference.rs  xref_stream.rs
livre-objects/src/structure/pages/: mod.rs  page.rs
livre-parser/: Cargo.toml
livre-parser/src/: error.rs  lib.rs
livre-parser/src/extraction/: mod.rs  parse.rs
livre-parser/src/utilities/: whitespace.rs
livre-serde/: Cargo.toml
livre-serde/src/: de.rs  error.rs  lib.rs  utilities.rs
livre-structure/: Cargo.toml
livre-structure/src/: lib.rs  object_stream.rs  startxref.rs
livre-structure/src/crossref/: location.rs  main.rs  mod.rs  plain.rs  reference.rs  xref_stream.rs
livre-structure/src/dictionaries/: catalogue.rs  font.rs  info.rs  mod.rs  trailer.rs
livre-structure/src/pages/: element.rs  leaf.rs  mod.rs  node.rs  page.rs  props.rs  resources.rs  variant.rs
livre-structure/src/trailer/: main.rs  mod.rs  plain.rs
livre-structure/src/trailer/crossref/: mod.rs  plain.rs  xref_stream.rs
livre-structures/: Cargo.toml
livre-structures/src/: lib.rs  point.rs  rectangle.rs
livre-text/: Cargo.toml
livre-text/src/: lib.rs  object.rs
livre-text/src/operators/: mod.rs  parsing.rs  showing.rs
livre-utilities/: Cargo.toml
livre-utilities/src/: delimited.rs  digits.rs  lib.rs  misc.rs  whitespace.rs
livre/src/: lib.rs
livre/src/data/: position.rs  rectangle.rs
livre/src/filters/: dct.rs  mod.rs
livre/src/objects/: mod.rs
livre/src/parsers/: mod.rs
livre/src/serde/: de.rs  utilities.rs
livre/src/structure/: mod.rs  object_stream.rs
livre/src/text/: mod.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs  page.rs
src/: crossrefs.rs  document.rs  error.rs  filtering.rs  lib.rs  utilities.rs
src/builder/: behaviour.rs  builders.rs  mod.rs  parser.rs  primitive.rs  proxy.rs
src/builder/builders/: unit.rs
src/content/: arguments.rs  error.rs  mod.rs  operators.rs  state.rs
src/content/operators/: accumulator.rs  behavior.rs  mod.rs
src/content/state/: mod.rs  text.rs
src/data/: rectangle.rs
src/document/: document.rs  header.rs  mod.rs  update.rs
src/extraction/: behaviour.rs  boolean.rs  extract.rs  from_raw_dict.rs  integers.rs  mod.rs  numbers.rs  reals.rs  vec.rs
src/extraction/pdf/: map.rs  (+8 more)
src/filters/: flate.rs  mod.rs
src/follow_refs/: build.rs  builder.rs  from_raw_dict.rs  mod.rs  primitive.rs
src/fonts/: cmap.rs  descriptor.rs  descriptors.rs  mod.rs  simple_font.rs  type1.rs
src/objects/: array.rs  boolean.rs  dictionary.rs  hex_string.rs  integer.rs  literal_string.rs  mod.rs  name.rs  object.rs  real.rs  reference.rs  stream.rs
src/parsers/: comment.rs  crossref.rs  header.rs  mod.rs  object.rs  trailer.rs  utilities.rs  version.rs
src/pdf/: catalog.rs  catalogue.rs  content.rs  mod.rs  pages.rs  trailer.rs  xref.rs
src/serde/: de.rs
src/structure/: build.rs  catalog.rs  cmap.rs  content.rs  crossrefs.rs  document.rs  header.rs  mod.rs  object_stream.rs  pages.rs  startxref.rs  stream.rs  trailer.rs  update.rs
src/structures/: id.rs  mod.rs  rectangle.rs
src/text/: mod.rs  object.rs
src/utilities/: delimited.rs  digits.rs  misc.rs  mod.rs  whitespace.rs
tests/: content.rs  doc.rs  test.txt  text_objects.rs
tests/resources/: letter.txt
(+168 files in other folders)
