[workspace]
members = ["livre-derive"]

[package]
name = "livre"
version = "0.3.0"
edition = "2021"
authors = ["Basile Dura <basile@bdura.me>"]
rust-version = "1.82.0"

readme = "README.md"
description = "Livre: a type-safe PDF parser"
repository = "https://github.com/bdura/livre"

license = "MIT"
keywords = ["pdf"]

[dependencies]
winnow = "0.6"

enum_dispatch = "0.3"

# Filtering
flate2 = "1"

paste = "1"
livre-derive = { path = "./livre-derive", version = "0.1.0" }

[dev-dependencies]
rstest = "0.23"
indoc = "2"
