[workspace]
members = ["livre-derive"]

[package]
name = "livre"
version = "0.6.0"
edition = "2021"
authors = ["Basile Dura <basile@bdura.me>"]
rust-version = "1.82.0"

readme = "README.md"
description = "Livre: a type-safe PDF parser"
repository = "https://github.com/bdura/livre"

license = "MIT"
keywords = ["pdf"]

[dependencies]
winnow = "1.0"

enum_dispatch = "0.3"

# Filtering
flate2 = "1"

paste = "1"
livre-derive = { path = "./livre-derive", version = "0.2.1" }
thiserror = "2.0.11"
tracing = "0.1.44"

[dev-dependencies]
rstest = "0.26"
indoc = "2"
