[package]
name = "livre-data"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7"

livre-extraction = { path = "../livre-extraction" }
livre-utilities = { path = "../livre-utilities" }
livre-serde = { path = "../livre-serde" }

serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rstest = "0.21"
