[package]
name = "livre-derive"
version = "0.1.0"
edition = "2021"
authors = ["Basile Dura <basile@bdura.me>"]
rust-version = "1.82.0"

readme = "README.md"
description = "Another PDF parser, aiming for type-safety"
repository = "https://github.com/bdura/livre"

license = "MIT"
keywords = ["pdf"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
