[package]
name = "livre-document"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7"

livre-extraction = { path = "../livre-extraction" }
livre-utilities = { path = "../livre-utilities" }
livre-filters = { path = "../livre-filters" }
livre-data = { path = "../livre-data" }
livre-objects = { path = "../livre-objects" }
livre-structure = { path = "../livre-structure" }
livre-serde = { path = "../livre-serde" }

serde = { version = "1", features = ["derive"] }

[dev-dependencies]
indoc = "2.0.4"
rstest = "0.21"
livre-fonts = { path = "../livre-fonts" }
