[package]
name = "livre-filters"
version = "0.1.0"
edition = "2021"

[dependencies]
enum_dispatch = "0.3"
flate2 = "1"
thiserror = "1"

serde = { version = "1", features = ["derive"] }

livre-extraction = { path = "../livre-extraction" }

[dev-dependencies]
livre-serde = { path = "../livre-serde" }
rstest = "0.21"
