[package]
name = "livre-fonts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
enum_dispatch = "0.3"

livre-extraction = { path = "../livre-extraction" }
livre-data = { path = "../livre-data" }

[dev-dependencies]
indoc = "2"
rstest = "0.19"
