[package]
name = "livre-leg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.12"
flate2 = "1.0.28"
nom = "7"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.57"

[dev-dependencies]
indoc = "2.0.4"
rstest = "0.18.2"
