[package]
name = "livre-serde"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
livre-extraction = { path = "../livre-extraction" }
livre-utilities = { path = "../livre-utilities" }
nom = "7.1.3"
serde = "1.0.204"
thiserror = "1.0.62"
paste = "1.0"

[dev-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
rstest = "0.21"
indoc = "2"
